--- a/.travis.yml
+++ b/.travis.yml
@@ -6,3 +6,4 @@ before_script:
     - sudo apt-get update -q
     - sudo apt-get install mono-opt emacs-snapshot emacs-snapshot-el
     - git clone https://github.com/nosami/OmniSharpServer.git
+    - curl -fsSkL https://raw.github.com/cask/cask/master/go | python
