--- a/.travis.yml
+++ b/.travis.yml
@@ -2,7 +2,7 @@ language: c
 
 before_script:
     - sudo sh -c "echo 'deb http://download.opensuse.org/repositories/home:/tpokorra:/mono/xUbuntu_12.04/ /' >> /etc/apt/sources.list.d/mono-opt.list"
-    - sudo add-apt-repository -y ppa:ubuntu-elisp/ppa
+    - sudo add-apt-repository -y --force-yes ppa:ubuntu-elisp/ppa
     - sudo apt-get update -q
     - sudo apt-get install mono-opt emacs-snapshot emacs-snapshot-el
     - git clone https://github.com/nosami/OmniSharpServer.git
