--- a/.travis.yml
+++ b/.travis.yml
@@ -1,13 +1,15 @@
 language: c
 
 before_script:
-    - sudo sh -c "echo 'deb http://download.opensuse.org/repositories/home:/tpokorra:/mono/xUbuntu_12.04/ /' >> /etc/apt/sources.list.d/mono-opt.list"
+      - sudo sh -c "echo 'deb http://download.mono-project.com/repo/debian wheezy main' > /etc/apt/sources.list.d/mono-xamarin.list"
+      - sudo sh -c "echo 'deb http://download.mono-project.com/repo/debian wheezy-libtiff-compat main' >> /etc/apt/sources.list.d/mono-xamarin.list"
     - sudo add-apt-repository -y ppa:ubuntu-elisp/ppa
     - sudo apt-get update -q
-    - sudo apt-get install --force-yes mono-opt emacs-snapshot emacs-snapshot-el
+    - sudo apt-get install --force-yes mono-devel emacs-snapshot emacs-snapshot-el
     - git clone https://github.com/nosami/OmniSharpServer.git
     - curl -fsSkL https://raw.github.com/cask/cask/master/go | python
     - export PATH="/home/travis/.cask/bin:$PATH"
+    - emacs --version
     - cask
     - mono --version
     - cd OmniSharpServer
