Try to run all test commands in travis + install via melpa
Using a custom recipe so we get exactly the branch we want

--- a/.travis.yml
+++ b/.travis.yml
@@ -19,6 +19,4 @@ before_script:
     - cask
     
 script:
-    ./run-integration-tests.sh
-    ./run-tests.sh
-    ./run-melpa-build-test.sh
+    ./run-entire-melpa-build.sh
