--- a/.gitignore
+++ b/.gitignore
@@ -1,3 +1,7 @@
 /.cask/
 /melpa/
 /installation-output.txt
+/node_modules/
+/test/MinimalSolution/minimal/.ecukes-failing-scenarios
+# backup files by emacs
+/test/MinimalSolution/minimal/#*
