--- a/.travis.yml
+++ b/.travis.yml
@@ -5,13 +5,12 @@ before_script:
     - sudo sh -c "echo 'deb http://download.mono-project.com/repo/debian wheezy-libtiff-compat main' >> /etc/apt/sources.list.d/mono-xamarin.list"
     - sudo add-apt-repository -y ppa:ubuntu-elisp/ppa
     - sudo apt-get update -qq
-    - sudo apt-get install --force-yes mono-devel emacs-snapshot emacs-snapshot-el
-    - git clone https://github.com/nosami/OmniSharpServer.git
+    - sudo apt-get install --force-yes mono-devel emacs-snapshot emacs-snapshot-el npm
+    - npm i omnisharp-server-roslyn-binaries
+    - cd node_modules/omnisharp-server-roslyn-binaries
     - mono --version
-    - cd OmniSharpServer
-    - git submodule update --init --recursive
-    - xbuild
-    - mono ./OmniSharp/bin/Debug/OmniSharp.exe -s ./OmniSharp.Tests/Solution/minimal/minimal.sln &
+    - cd test/MinimalSolution
+    - ../../node_modules/omnisharp-server-roslyn-binaries/lib/server/omnisharp
     - cd ..
     - curl -fsSkL https://raw.github.com/cask/cask/master/go | python
     - export PATH="/home/travis/.cask/bin:$PATH"
