Add a script for starting the server for integration tests

--- a/.gitignore
+++ b/.gitignore
@@ -5,3 +5,4 @@
 /test/MinimalSolution/minimal/.ecukes-failing-scenarios
 # backup files by emacs
 /test/MinimalSolution/minimal/#*
+/omnisharp-roslyn/
