--- a/.travis.yml
+++ b/.travis.yml
@@ -1,8 +1,6 @@
 language: c
 
 before_script:
-    - sudo sh -c "echo 'deb http://download.mono-project.com/repo/debian wheezy main' > /etc/apt/sources.list.d/mono-xamarin.list"
-    - sudo sh -c "echo 'deb http://download.mono-project.com/repo/debian wheezy-libtiff-compat main' >> /etc/apt/sources.list.d/mono-xamarin.list"
     - sudo add-apt-repository -y ppa:ubuntu-elisp/ppa
     - sudo apt-get update -qq
     - sudo apt-get install --force-yes mono-devel emacs-snapshot emacs-snapshot-el
@@ -11,6 +9,7 @@ before_script:
     - wget https://github.com/OmniSharp/omnisharp-roslyn/releases/download/v1.0.3/omnisharp.tar.gz
     - tar xzvf omnisharp.tar.gz
     - cd ..
+    - ./travis-stuff/install-mono.sh
     - mono --version
     - ./start-omnisharp-server-for-integration-tests.sh
     - curl -fsSkL https://raw.github.com/cask/cask/master/go | python
