--- a/.travis.yml
+++ b/.travis.yml
@@ -1,23 +1,24 @@
-language: c
-sudo: required
+language: csharp
+mono:
+- beta
+
+install: curl -sSL https://raw.githubusercontent.com/aspnet/Home/dev/dnvminstall.sh
+  | sh && source ~/.dnx/dnvm/dnvm.sh && dnvm upgrade
 
 before_script:
-    - sudo sh -c "echo 'deb http://download.mono-project.com/repo/debian wheezy main' > /etc/apt/sources.list.d/mono-xamarin.list"
-    - sudo sh -c "echo 'deb http://download.mono-project.com/repo/debian wheezy-libtiff-compat main' >> /etc/apt/sources.list.d/mono-xamarin.list"
     - sudo add-apt-repository -y ppa:ubuntu-elisp/ppa
     - sudo apt-get update -qq
-    - sudo apt-get install --force-yes mono-devel emacs-snapshot emacs-snapshot-el
+    - sudo apt-get install --force-yes emacs-snapshot emacs-snapshot-el
     - mkdir omnisharp-roslyn
     - cd omnisharp-roslyn
     - wget https://github.com/OmniSharp/omnisharp-roslyn/releases/download/v1.0.3/omnisharp.tar.gz
     - tar xzvf omnisharp.tar.gz
     - cd ..
-    - ./travis-stuff/install-mono.sh
     - mono --version
     - curl -fsSkL https://raw.github.com/cask/cask/master/go | python
     - export PATH="/home/travis/.cask/bin:$PATH"
     - emacs --version
     - cask
-    
+
 script:
     ./run-entire-travis-build.sh
