--- a/.travis.yml
+++ b/.travis.yml
@@ -6,6 +6,8 @@ install: curl -sSL https://raw.githubusercontent.com/aspnet/Home/dev/dnvminstall
   | sh && source ~/.dnx/dnvm/dnvm.sh && dnvm upgrade
 
 before_script:
+    - sudo add-apt-repository -y ppa:ubuntu-elisp/ppa
+    - sudo apt-get update -qq
     - sudo apt-get install --force-yes emacs24
     - mkdir omnisharp-roslyn
     - cd omnisharp-roslyn
