--- a/.travis.yml
+++ b/.travis.yml
@@ -6,19 +6,16 @@ install: curl -sSL https://raw.githubusercontent.com/aspnet/Home/dev/dnvminstall
   | sh && source ~/.dnx/dnvm/dnvm.sh && dnvm upgrade
 
 before_script:
-    - sudo add-apt-repository -y ppa:ubuntu-elisp/ppa
-    - sudo apt-get update -qq
-    - sudo apt-get install --force-yes emacs24
+    - curl -fsSkL https://gist.github.com/rejeep/7736123/raw > travis.sh && source ./travis.sh
+    - evm list
+    - emacs --version
+    - cask install
     - mkdir omnisharp-roslyn
     - cd omnisharp-roslyn
     - wget https://github.com/OmniSharp/omnisharp-roslyn/releases/download/v1.0.3/omnisharp.tar.gz
     - tar xzvf omnisharp.tar.gz
     - cd ..
     - mono --version
-    - curl -fsSkL https://raw.github.com/cask/cask/master/go | python
-    - export PATH="/home/travis/.cask/bin:$PATH"
-    - emacs --version
-    - cask install
 
 script:
     ./run-entire-travis-build.sh
