Attempt to use a docker container for travis
Sudo is no longer required it seems

--- a/.travis.yml
+++ b/.travis.yml
@@ -1,6 +1,7 @@
 language: csharp
 mono:
 - beta
+sudo: false
 
 install: curl -sSL https://raw.githubusercontent.com/aspnet/Home/dev/dnvminstall.sh
   | sh && source ~/.dnx/dnvm/dnvm.sh && dnvm upgrade
