--- a/.travis.yml
+++ b/.travis.yml
@@ -19,3 +19,11 @@ before_script:
 
 script:
     ./run-entire-travis-build.sh
+
+notifications:
+    webhooks:
+        urls:
+          - https://webhooks.gitter.im/e/5ad7b48d1cea3eb74221
+        on_success: change  # options: [always|never|change] default: always
+        on_failure: always  # options: [always|never|change] default: always
+        on_start: false     # default: false
