Fix travis expecting old omnisharp-roslyn file name

--- a/.travis.yml
+++ b/.travis.yml
@@ -10,12 +10,10 @@ before_script:
     - evm list
     - emacs --version
     - cask install
-    - mkdir omnisharp-roslyn
-    - cd omnisharp-roslyn
-    - wget $(curl -s https://api.github.com/repos/omnisharp/omnisharp-roslyn/releases/latest | grep browser_download_url | awk '{ print $2 }' | sed s/\"//g | sed s/,//g)
-    - tar xzvf omnisharp.tar.gz
-    - cd ..
     - mono --version
+    - cd travis-stuff
+    - ./install-omnisharp-roslyn.sh
+    - cd ..
 
 script:
     ./run-entire-travis-build.sh
