--- a/.travis.yml
+++ b/.travis.yml
@@ -9,6 +9,17 @@ install:
     - sudo apt-get install -y dotnet-dev-1.0.0-rc2-002543
     - dotnet --version
 
+# https://github.com/dotnet/cli/issues/3657#issuecomment-227890589
+addons:
+  apt:
+    packages:
+    - gettext
+    - libcurl4-openssl-dev
+    - libicu-dev
+    - libssl-dev
+    - libunwind8
+    - zlib1g
+
 before_script:
     - curl -fsSkL https://gist.github.com/rejeep/7736123/raw > travis.sh && source ./travis.sh
     - evm list
