Current .travis uses omnisharp-ubuntu.14.04-x64 build. Keep it that way for now.

--- a/.travis.yml
+++ b/.travis.yml
@@ -30,7 +30,7 @@ before_script:
     - emacs --version
     - cask install
     - cd travis-stuff
-    - ./install-omnisharp-roslyn.sh
+    - OMNISHARP_TRAVIS_RUN=yes ./install-omnisharp-roslyn.sh
     - cd ..
 
 script:
