--- a/.travis.yml
+++ b/.travis.yml
@@ -1,10 +1,10 @@
 language: generic
 sudo: required
-dist: jessie
+dist: trusty
 
 install:
     - sudo apt-key adv --keyserver hkp://keyserver.ubuntu.com:80 --recv-keys 3FA7E0328081BFF6A14DA29AA6A19B38D3D831EF
-    - echo "deb http://download.mono-project.com/repo/debian jessie main" | sudo tee /etc/apt/sources.list.d/mono-official.list
+    - echo "deb http://download.mono-project.com/repo/ubuntu trusty main" | sudo tee /etc/apt/sources.list.d/mono-official.list
     - sudo apt-get update
     - sudo apt-get install -y mono-devel
 
