--- a/.travis.yml
+++ b/.travis.yml
@@ -3,10 +3,12 @@ sudo: required
 dist: trusty
 
 install:
-    - sudo apt-key adv --keyserver hkp://keyserver.ubuntu.com:80 --recv-keys 3FA7E0328081BFF6A14DA29AA6A19B38D3D831EF
     - echo "deb http://download.mono-project.com/repo/ubuntu trusty main" | sudo tee /etc/apt/sources.list.d/mono-official.list
+    - sudo apt-key adv --keyserver hkp://keyserver.ubuntu.com:80 --recv-keys 3FA7E0328081BFF6A14DA29AA6A19B38D3D831EF
+    - echo "deb [arch=amd64] https://apt-mo.trafficmanager.net/repos/dotnet-release/ trusty main" | sudo tee /etc/apt/sources.list.d/dotnetdev.list
+    - sudo apt-key adv --keyserver hkp://keyserver.ubuntu.com:80 --recv-keys 417A0893
     - sudo apt-get update
-    - sudo apt-get install -y mono-devel
+    - sudo apt-get install -y mono-devel dotnet
 
 before_script:
     # install evm (emacs version manager) and cask (dependency resolver/build tool)
