Make Docker as a default way to run tests at any environment, including travis.

--- a/Dockerfile.testing
+++ b/Dockerfile.testing
@@ -43,8 +43,6 @@ RUN cask install
 COPY test/*.el test/
 COPY test/buttercup-tests test/buttercup-tests
 COPY ignored-from-melpa-build/*.el ignored-from-melpa-build/
-COPY *.sh ./
-COPY melpa-testing.recipe melpa-testing.recipe
+COPY test-stuff/* ./
 COPY .git .git
-RUN git checkout master
 
