--- a/.travis.yml
+++ b/.travis.yml
@@ -1,30 +1,15 @@
-language: generic
 sudo: required
-dist: trusty
 
-install:
-    - echo "deb http://download.mono-project.com/repo/ubuntu trusty main" | sudo tee /etc/apt/sources.list.d/mono-official.list
-    - sudo apt-key adv --keyserver hkp://keyserver.ubuntu.com:80 --recv-keys 3FA7E0328081BFF6A14DA29AA6A19B38D3D831EF
-    - echo "deb [arch=amd64] https://apt-mo.trafficmanager.net/repos/dotnet-release/ trusty main" | sudo tee /etc/apt/sources.list.d/dotnetdev.list
-    - sudo apt-key adv --keyserver hkp://keyserver.ubuntu.com:80 --recv-keys 417A0893
-    - sudo apt-get update
-    - sudo apt-get install -y mono-devel dotnet-dev-1.0.4
+language: generic
 
-before_script:
-    # install evm (emacs version manager) and cask (dependency resolver/build tool)
-    - curl -fsSkL https://gist.github.com/rejeep/7736123/raw > travis.sh && source ./travis.sh
-    - evm list
-    # use this version of emacs for tests
-    - evm install emacs-24.5-bin --use --skip
-    - evm list
-    - emacs --version
-    - cask install
-    - cd travis-stuff
-    - ./install-omnisharp-roslyn.sh
-    - cd ..
+services:
+  - docker
+
+before_install:
+  - docker-compose build
 
 script:
-    ./run-entire-travis-build.sh
+    ./run-tests.sh
 
 notifications:
     webhooks:
