Use latest docker, docker-compose and cache image

--- a/.travis.yml
+++ b/.travis.yml
@@ -5,8 +5,30 @@ language: generic
 services:
   - docker
 
+env:
+  - DOCKER_COMPOSE_VERSION=1.14.0
+  - CACHE_DIR=$HOME/.cache/docker
+  - CACHE_FILE=$CACHE_DIR/omnisharp-testing.tar.gz
+
+cache:
+  directories:
+  - $CACHE_DIR
+
 before_install:
+  - curl -fsSL https://download.docker.com/linux/ubuntu/gpg | sudo apt-key add -
+  - sudo add-apt-repository "deb [arch=amd64] https://download.docker.com/linux/ubuntu $(lsb_release -cs) stable"
+  - sudo apt-get update
+  - sudo apt-get -y install docker-ce
+  - sudo rm /usr/local/bin/docker-compose
+  - curl -L https://github.com/docker/compose/releases/download/${DOCKER_COMPOSE_VERSION}/docker-compose-`uname -s`-`uname -m` > docker-compose
+  - chmod +x docker-compose
+  - sudo mv docker-compose /usr/local/bin
+  - if [ -f ${CACHE_FILE} ]; then gunzip -c ${CACHE_FILE} | docker load; fi
+
+install:
   - docker-compose build
+  - mkdir -p $CACHE_DIR
+  - if [ ! -f ${CACHE_FILE} ]; then docker save omnisharp-testing:latest | gzip > ${CACHE_FILE}; fi
 
 script:
     ./run-tests.sh
