--- a/docker-compose.yml
+++ b/docker-compose.yml
@@ -1,12 +1,10 @@
 version: '3.3'
 services:
-  base: &base
+  tests:
     build:
       context: .
       dockerfile: Dockerfile.testing
     image: omnisharp-testing
     volumes:
       - '.:/tmp/src'
-  tests:
-    <<: *base
-    command: bash -c "cp /tmp/src/*.el /usr/src/ && cp /tmp/src/test/*.el /usr/src/test/ && cp -r /tmp/src/test/buttercup-tests /usr/src/test/ && ./run-all-tests.sh"
+    command: bash -c "cp /tmp/src/*.el /usr/src/ && cp /tmp/src/test/*.el /usr/src/test/ && cp -r /tmp/src/test/buttercup-tests /usr/src/test/ && ./test-stuff/run-all-tests.sh"
