--- a/docker-compose.yml
+++ b/docker-compose.yml
@@ -5,6 +5,10 @@ services:
       context: .
       dockerfile: Dockerfile.testing
     image: omnisharp-testing
+    environment:
+      - TRAVIS
+      - TRAVIS_BRANCH
+      - TRAVIS_REPO_SLUG
     volumes:
       - '.:/tmp/src'
     command: bash -c "cp /tmp/src/*.el /usr/src/ && cp /tmp/src/test/*.el /usr/src/test/ && cp -r /tmp/src/test/buttercup-tests /usr/src/test/ && ./test-stuff/run-all-tests.sh"
