--- a/.travis.yml
+++ b/.travis.yml
@@ -8,12 +8,6 @@ services:
 env:
   global:
     - DOCKER_COMPOSE_VERSION=1.14.0
-    - CACHE_DIR=$HOME/.cache/docker
-    - CACHE_FILE=$CACHE_DIR/omnisharp-testing.tar.gz
-
-cache:
-  directories:
-    - $CACHE_DIR
 
 before_install:
   - curl -fsSL https://download.docker.com/linux/ubuntu/gpg | sudo apt-key add -
@@ -24,15 +18,12 @@ before_install:
   - curl -L https://github.com/docker/compose/releases/download/${DOCKER_COMPOSE_VERSION}/docker-compose-`uname -s`-`uname -m` > docker-compose
   - chmod +x docker-compose
   - sudo mv docker-compose /usr/local/bin
-  - if [ -f ${CACHE_FILE} ]; then gunzip -c ${CACHE_FILE} | docker load; fi
 
 install:
   - docker-compose build
-  - mkdir -p $CACHE_DIR
-  - if [ ! -f ${CACHE_FILE} ]; then docker save omnisharp-testing:latest | gzip > ${CACHE_FILE}; fi
 
 script:
-    ./run-tests.sh
+  - ./run-tests.sh
 
 notifications:
     webhooks:
