--- a/docker-compose.yml
+++ b/docker-compose.yml
@@ -11,4 +11,5 @@ services:
       - TRAVIS_REPO_SLUG
     volumes:
       - '.:/tmp/src'
+      - './test-cache/emacs-d-cache:/root/.emacs.d/.cache'
     command: bash -c "cp /tmp/src/*.el /usr/src/ && cp /tmp/src/test/*.el /usr/src/test/ && cp -r /tmp/src/test/buttercup-tests /usr/src/test/ && ./test-stuff/run-all-tests.sh"
