--- a/test/MinimalProject/MinimalProject.csproj
+++ b/test/MinimalProject/MinimalProject.csproj
@@ -1,10 +1,5 @@
 ﻿<Project Sdk="Microsoft.NET.Sdk">
-
   <PropertyGroup>
-    <TargetFramework>netcoreapp1.1</TargetFramework>
-    <AssemblyName>MinimalProject</AssemblyName>
-    <OutputType>Exe</OutputType>
-    <PackageId>MinimalProject</PackageId>
-    <RuntimeFrameworkVersion>1.1.0</RuntimeFrameworkVersion>
+    <TargetFramework>netstandard2.0</TargetFramework>
   </PropertyGroup>
 </Project>
